# tcc

./: .gitignore  a.py  pyproject.toml  split_dataset_by_brisque.py  split_dataset_by_classes.py  test.py
scripts/: main.ipynb
tcc/: samples.ipynb  train_analysis.ipynb
tcc/autoencoders/: autoencoder.ipynb  autoencoder_bak.ipynb  autoencoder_hp.ipynb  autoencoer.ipynb  brisque_scores.csv  build.py  cluster.py  dataloader.py  exploratory.ipynb  exploratory.py  extract_nones.ipynb  feature_extraction.py  gen_crops.py  quality.ipynb  reclassify.py  split.py  split_by_brisque.ipynb  train.ipynb  train.py  validate.py  visualize.ipynb
tcc/train/: training.ipynb
